Resolving Security Issue