@@ -11,9 +11,12 @@ import com.ecommerce.project.security.request.SignupRequest;
 import com.ecommerce.project.security.response.MessageResponse;
 import com.ecommerce.project.security.response.UserInfoResponse;
 import com.ecommerce.project.security.services.UserDetailsImpl;
+import jakarta.servlet.http.Cookie;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -58,15 +61,14 @@ public class AuthController {
             map.put("status", false);
             return new ResponseEntity<>(map, HttpStatus.NOT_FOUND);
         }
-
         SecurityContextHolder.getContext().setAuthentication(authentication);
         UserDetailsImpl userDetailsImpl = (UserDetailsImpl) authentication.getPrincipal();
-        String jwtToken = jwtUtils.generateTokenFromUsername(userDetailsImpl);
+        ResponseCookie jwtCookie = jwtUtils.generateJwtCookie(userDetailsImpl);
         List<String> roles = userDetailsImpl.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .toList();
-        UserInfoResponse response = new UserInfoResponse(userDetailsImpl.getId(),userDetailsImpl.getUsername(), roles, jwtToken );
-        return ResponseEntity.ok(response);
+                .map(item -> item.getAuthority())
+                .collect(Collectors.toList());
+        UserInfoResponse response = new UserInfoResponse(userDetailsImpl.getId(),userDetailsImpl.getUsername(), roles, jwtCookie.toString());
+        return ResponseEntity.ok().header(HttpHeaders.SET_COOKIE, jwtCookie.toString()).body(response);
     }
 
 
